# ascii-rpg

./: CMakeLists.txt  README.md
files/: battle.txt  enemy_attack.txt  enemy_burn.txt  enemy_fire_shield.txt  enemy_freeze.txt  enemy_ice_shield.txt  help_battle.txt  help_world.txt  player_attack.txt  player_crit.txt  player_fire.txt  player_ice.txt  player_ltng.txt  player_parry.txt  spell_options.txt  title.txt
src/: Actor.cpp  Actor.h  Answer.h  Battle.cpp  Battle.h  Block.h  Enemy.cpp  Enemy.h  Entity.h  Frame_manager.cpp  Frame_manager.h  Item.h  Key.h  Option.cpp  Option.h  Player.cpp  Player.h  Position.cpp  Position.h  Selection.h  Spell.h  World_map.cpp  World_map.h  constants.h  frames.h  input.cpp  input.h  main.cpp  prompt.cpp  prompt.h  utils.cpp  utils.h
